# llm-assisted-data-pipeline

./: .gitignore  AGENT_DOCUMENTATION.md  AGENT_EXAMPLES.md  AGENT_SYSTEM_SUMMARY.md  ARCHITECTURE.md  CASE_STUDY.md  CODE_REVIEW.md  COMMIT_MESSAGE_DETAILS.md  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  GIT_PUSH_SUMMARY.md  IMPROVEMENTS.md  INTERACTIVE_DEMO.md  PORTFOLIO_GUIDE.md  PORTFOLIO_QUICK_REFERENCE.md  README.md  README_REVIEW.md  REQUIREMENTS.md  REVIEW_EXECUTIVE_SUMMARY.txt  REVIEW_SUMMARY.md  REVIEW_VISUAL_SUMMARY.txt  SCHEMA_VALIDATION_RULES.md  agent.py  app.py  pipeline.py  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  test_agent.csv  test_pipeline.py
.github/workflows/: tests.yml
docs/: index.html
